#3 new theory and removal of energy state